corrected the url path to details page and added a button( scroll to top) functionality

--- a/src/input.css
+++ b/src/input.css
@@ -81,5 +81,5 @@ svg#moon.dark, svg#arrow.dark {
 
 /* Search feature highlighted Text style */
 .highlight {
-    background-color: rgb(255, 255, 0);
+    background-color: rgb(255 0 109);
 }
