--- a/public/output.css
+++ b/public/output.css
@@ -604,6 +604,78 @@ video {
   top: 0px;
 }
 
+.bottom-12{
+  bottom: 3rem;
+}
+
+.top-12{
+  top: 3rem;
+}
+
+.top-3{
+  top: 0.75rem;
+}
+
+.top-32{
+  top: 8rem;
+}
+
+.right-4{
+  right: 1rem;
+}
+
+.bottom-32{
+  bottom: 8rem;
+}
+
+.top-1{
+  top: 0.25rem;
+}
+
+.top-1\/2{
+  top: 50%;
+}
+
+.top-\[100\%\]{
+  top: 100%;
+}
+
+.top-\[70\]{
+  top: 70;
+}
+
+.top-\[70\%\]{
+  top: 70%;
+}
+
+.top-\[79\%\]{
+  top: 79%;
+}
+
+.top-\[90\%\]{
+  top: 90%;
+}
+
+.right-3{
+  right: 0.75rem;
+}
+
+.top-\[80\%\]{
+  top: 80%;
+}
+
+.right-\[3\]{
+  right: 3;
+}
+
+.right-\[3vw\]{
+  right: 3vw;
+}
+
+.right-\[1vw\]{
+  right: 1vw;
+}
+
 .z-10{
   z-index: 10;
 }
@@ -657,16 +729,12 @@ video {
   margin-top: -8rem;
 }
 
-.mt-\[5\.5rem\]{
-  margin-top: 5.5rem;
+.mt-\[7rem\]{
+  margin-top: 7rem;
 }
 
 .mt-\[8rem\]{
   margin-top: 8rem;
-}
-
-.mt-\[7rem\]{
-  margin-top: 7rem;
 }
 
 .flex{
@@ -675,6 +743,10 @@ video {
 
 .grid{
   display: grid;
+}
+
+.hidden{
+  display: none;
 }
 
 .h-4{
@@ -689,13 +761,21 @@ video {
   height: 170px;
 }
 
+.h-fit{
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .h-full{
   height: 100%;
 }
 
-.h-fit{
-  height: -moz-fit-content;
-  height: fit-content;
+.h-6{
+  height: 1.5rem;
+}
+
+.h-8{
+  height: 2rem;
 }
 
 .w-4{
@@ -721,6 +801,14 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-6{
+  width: 1.5rem;
+}
+
+.w-8{
+  width: 2rem;
 }
 
 .max-w-\[353px\]{
@@ -789,6 +877,10 @@ video {
 
 .justify-self-end{
   justify-self: end;
+}
+
+.scroll-smooth{
+  scroll-behavior: smooth;
 }
 
 .rounded-md{
@@ -936,6 +1028,10 @@ video {
   font-weight: 500;
 }
 
+.font-bold{
+  font-weight: 700;
+}
+
 .text-veryDarkBlueText{
   --tw-text-opacity: 1;
   color: hsl(200 15% 8% / var(--tw-text-opacity));
@@ -1065,19 +1161,7 @@ svg#moon.dark, svg#arrow.dark {
 /* Search feature highlighted Text style */
 
 .highlight {
-  background-color: rgb(255, 255, 0);
-}
-
-.hover\:scale-105:hover{
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:shadow-lg:hover{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  background-color: rgb(255 0 109);
 }
 
 @media (min-width: 640px){
@@ -1096,10 +1180,6 @@ svg#moon.dark, svg#arrow.dark {
 }
 
 @media (min-width: 768px){
-  .md\:top-\[-69\%\]{
-    top: -69%;
-  }
-
   .md\:top-\[39\%\]{
     top: 39%;
   }
