--- a/public/output.css
+++ b/public/output.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,500;6..12,600;6..12,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;500;600;800&display=swap');
 
 /*
 ! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com
@@ -600,80 +600,16 @@ video {
   left: 2.5rem;
 }
 
+.right-\[1vw\]{
+  right: 1vw;
+}
+
 .top-0{
   top: 0px;
 }
 
-.bottom-12{
-  bottom: 3rem;
-}
-
-.top-12{
-  top: 3rem;
-}
-
-.top-3{
-  top: 0.75rem;
-}
-
-.top-32{
-  top: 8rem;
-}
-
-.right-4{
-  right: 1rem;
-}
-
-.bottom-32{
-  bottom: 8rem;
-}
-
-.top-1{
-  top: 0.25rem;
-}
-
-.top-1\/2{
-  top: 50%;
-}
-
-.top-\[100\%\]{
-  top: 100%;
-}
-
-.top-\[70\]{
-  top: 70;
-}
-
-.top-\[70\%\]{
-  top: 70%;
-}
-
-.top-\[79\%\]{
-  top: 79%;
-}
-
 .top-\[90\%\]{
   top: 90%;
-}
-
-.right-3{
-  right: 0.75rem;
-}
-
-.top-\[80\%\]{
-  top: 80%;
-}
-
-.right-\[3\]{
-  right: 3;
-}
-
-.right-\[3vw\]{
-  right: 3vw;
-}
-
-.right-\[1vw\]{
-  right: 1vw;
 }
 
 .z-10{
@@ -757,6 +693,10 @@ video {
   height: 1.25rem;
 }
 
+.h-8{
+  height: 2rem;
+}
+
 .h-\[170px\]{
   height: 170px;
 }
@@ -770,20 +710,16 @@ video {
   height: 100%;
 }
 
-.h-6{
-  height: 1.5rem;
-}
-
-.h-8{
-  height: 2rem;
-}
-
 .w-4{
   width: 1rem;
 }
 
 .w-5{
   width: 1.25rem;
+}
+
+.w-8{
+  width: 2rem;
 }
 
 .w-\[55\%\]{
@@ -801,14 +737,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-6{
-  width: 1.5rem;
-}
-
-.w-8{
-  width: 2rem;
 }
 
 .max-w-\[353px\]{
@@ -1001,14 +929,14 @@ video {
   line-height: 1.5rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs{
@@ -1028,8 +956,8 @@ video {
   font-weight: 500;
 }
 
-.font-bold{
-  font-weight: 700;
+.font-semibold{
+  font-weight: 600;
 }
 
 .text-veryDarkBlueText{
